; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_trace-device.c_fz_trace_fill_image_mask.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_trace-device.c_fz_trace_fill_image_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }
%struct.TYPE_4__ = type { i32, i32* }

@.str = private unnamed_addr constant [17 x i8] c"<fill_image_mask\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c" width=\22%d\22 height=\22%d\22\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"/>\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, %struct.TYPE_5__*, i32, i32*, float*, float, i32)* @fz_trace_fill_image_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fz_trace_fill_image_mask(i32* %0, i32* %1, %struct.TYPE_5__* %2, i32 %3, i32* %4, float* %5, float %6, i32 %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_5__*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca float*, align 8
  %15 = alloca float, align 4
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_4__*, align 8
  %18 = alloca i32*, align 8
  store i32* %0, i32** %9, align 8
  store i32* %1, i32** %10, align 8
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32* %4, i32** %13, align 8
  store float* %5, float** %14, align 8
  store float %6, float* %15, align 4
  store i32 %7, i32* %16, align 4
  %19 = load i32*, i32** %10, align 8
  %20 = bitcast i32* %19 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %20, %struct.TYPE_4__** %17, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  store i32* %23, i32** %18, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = load i32*, i32** %18, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @fz_trace_indent(i32* %24, i32* %25, i32 %28)
  %30 = load i32*, i32** %9, align 8
  %31 = load i32*, i32** %18, align 8
  %32 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %30, i32* %31, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %33 = load i32*, i32** %9, align 8
  %34 = load i32*, i32** %18, align 8
  %35 = load i32, i32* %12, align 4
  %36 = call i32 @fz_trace_matrix(i32* %33, i32* %34, i32 %35)
  %37 = load i32*, i32** %9, align 8
  %38 = load i32*, i32** %18, align 8
  %39 = load i32*, i32** %13, align 8
  %40 = load float*, float** %14, align 8
  %41 = load float, float* %15, align 4
  %42 = call i32 @fz_trace_color(i32* %37, i32* %38, i32* %39, float* %40, float %41)
  %43 = load i32*, i32** %9, align 8
  %44 = load i32*, i32** %18, align 8
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %46 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %45, i32 0, i32 1
  %47 = load i32, i32* %46, align 4
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %43, i32* %44, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i32 %47, i32 %50)
  %52 = load i32*, i32** %9, align 8
  %53 = load i32*, i32** %18, align 8
  %54 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %52, i32* %53, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @fz_trace_indent(i32*, i32*, i32) #1

declare dso_local i32 @fz_write_printf(i32*, i32*, i8*, ...) #1

declare dso_local i32 @fz_trace_matrix(i32*, i32*, i32) #1

declare dso_local i32 @fz_trace_color(i32*, i32*, i32*, float*, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
